--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
         <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
 
+        <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
+
         <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
             #fuse-splash-screen {
